# cpp-develop-template

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.txt
.github/workflows/: cmake-test.yml  cmake.yml
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app-for-di/: CMakeLists.txt
src/app-for-di/src/: main.cc
src/app/src/: main.cc
src/di-lib/: CMakeLists.txt
src/di-lib/include/: ILib.h  Lib.h  LibComponent.h  LibInterface.h
src/di-lib/src/: Lib.cc  Lib.h  LibComponent.cc
src/di-lib/src/logger/: LogSettings.h  Logger.cc  Logger.h
src/di-lib/src/writer/: IWriter.h  StdoutWriter.cc  StdoutWriter.h  WriterInterface.h
src/lib/: CMakeLists.txt
src/lib/include/: SampleClass.h
src/lib/src/: SampleClass.cc
src/pimpl-lib/: CMakeLists.txt
src/pimpl-lib/include/: PimplLib.h
src/pimpl-lib/src/: PimplLib.cc  PimplLibImplementor.cc  PimplLibImplementor.h
test/: CMakeLists.txt
test/di-lib-test/: CMakeLists.txt  DiLibTest.cc  LogSettingsTest.cc  LoggerTest.cc  StdoutWriterTest.cc
test/googletest/: gmock-gtest-all.cc
test/googletest/gmock/: gmock.h
test/googletest/gtest/: gtest.h
test/pimpl-lib-test/: CMakeLists.txt  PimpleLibTest.cc
test/sample-test/: CMakeLists.txt  SampleTest.cc
